feat(tariffs-form):tariffs-form add disable

--- a/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
+++ b/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
@@ -83,7 +83,7 @@
   <app-button
     [disabled]="tariffs().length === 0"
     label="غیرفعال کردن تعرفه"
-    (click)="disableTariffs()"
+    (click)="onDisable()"
     severity="danger"
   />
   <app-button
