--- a/src/app/components/forms/driver-load-management-form/driver-load-permissions-form/driver-load-permissions-form.component.html
+++ b/src/app/components/forms/driver-load-management-form/driver-load-permissions-form/driver-load-permissions-form.component.html
@@ -19,7 +19,7 @@
     [disabled]="this.searchLoadPermissions.invalid"
     severity="info"
   >
-    مشاهده بار‍
+  مشاهده
   </app-button>
 </div>
 
