--- a/src/app/components/forms/shared/wallet-transactions-table/wallet-transactions-table.component.html
+++ b/src/app/components/forms/shared/wallet-transactions-table/wallet-transactions-table.component.html
@@ -1,1 +1,5 @@
-<app-table [rows]="transactions()" [columns]="columns"/>
+<app-table
+  [rows]="transactions()"
+  [columns]="columns"
+  [rowClass]="getRowColor"
+/>
