fix(transport-companies-wallet-payment-form): correct sharedSignal property name and type

--- a/src/app/components/forms/transport-companies-wallet-payment-form/transport-companies-wallet-payment-form.component.html
+++ b/src/app/components/forms/transport-companies-wallet-payment-form/transport-companies-wallet-payment-form.component.html
@@ -15,6 +15,5 @@
 <app-wallet-payment-form
   [walletType]="walletType"
   [transportComponyId]="transportComponyId"
-  [shearedSignal]="shearedSignal"
+  [sharedSignal]="sharedSignal"
 />
-
