fix(truck-wallet-payment-form): correct sharedSignal property name in template and component

--- a/src/app/components/forms/truck-wallet-payment-form/truck-wallet-payment-form.component.html
+++ b/src/app/components/forms/truck-wallet-payment-form/truck-wallet-payment-form.component.html
@@ -33,5 +33,5 @@
 <app-wallet-payment-form
   [walletType]="walletType"
   [truckId]="truckId"
-  [shearedSignal]="shearedSignal"
+  [sharedSignal]="sharedSignal"
 />
