fix(province-and-city-form):fix api issused onChange tree

--- a/src/app/components/forms/province-and-city-form/province-and-city-form.component.html
+++ b/src/app/components/forms/province-and-city-form/province-and-city-form.component.html
@@ -1,5 +1,5 @@
 <app-tree-table-checkbox
-  [tree]="provincesAndCites"
+  [tree]="provinces"
   [cols]="['فعال/غیرفعال']"
   [rows]="[['ProvinceName', 'CityTitle']]"
   [enabledSearch]="true"
