fix(core):fix some bug

--- a/src/app/components/shared/layout/mobile-tab-bar/mobile-tab-bar.component.html
+++ b/src/app/components/shared/layout/mobile-tab-bar/mobile-tab-bar.component.html
@@ -1,5 +1,5 @@
 <div
-  class="fixed flex justify-center items-center -translate-x-1/2 left-1/2 bottom-0 w-full h-22"
+  class="z-10 fixed flex justify-center items-center -translate-x-1/2 left-1/2 bottom-0 w-full h-22"
 >
   <div
     class="w-full h-full flex justify-around items-center bg-primary-emphasis text-primary-contrast rounded-t-3xl"
