ref(components/forms/turns-management-form)[turns-truck-info-base-form]: change some strings

--- a/src/app/components/forms/turns-management-form/turns-truck-info-base-form/turns-truck-info-base-form.component.html
+++ b/src/app/components/forms/turns-management-form/turns-truck-info-base-form/turns-truck-info-base-form.component.html
@@ -99,7 +99,7 @@
 
     <!-- 🔁 Turn Status Section -->
     <div class="grid grid-cols-12 gap-4 col-span-12">
-      <span class="col-span-12 text-xl font-bold px-2">آخرین صف نوبت</span>
+      <span class="col-span-12 text-xl font-bold px-2">آخرین نوبت</span>
       <div
         class="col-span-12 md:col-span-6 lg:col-span-4 xl:col-span-3 py-1 xl:py-0"
       >
@@ -128,7 +128,7 @@
         class="col-span-12 md:col-span-6 lg:col-span-4 xl:col-span-3 py-1 xl:py-0"
       >
         <app-text-input
-          [label]="appTitle.inputs.loads.loadStatus"
+          [label]="appTitle.inputs.turns.turnStatus"
           [control]="turnStats"
           [addonWidth]="addonWidth"
           [readOnly]="true"
