--- a/src/app/components/shared/layout/tab-manager/tab-manager.component.html
+++ b/src/app/components/shared/layout/tab-manager/tab-manager.component.html
@@ -5,12 +5,13 @@
       <div class="relative flex items-center h-8">
         <div>
           <div
+            [id] = "tab.id"
             (click)="onClickTab(tab)"
-            class="flex gap-2 pl-7 rounded-t-2xl pr-3 py-2 cursor-pointer transition-all ease-in-out duration-300 border-1"
+            class="flex gap-2 rounded-t-2xl pr-3 py-2 cursor-pointer transition-all ease-in-out duration-300 border-1"
             [ngClass]="{
-              'bg-highlight-emphasis text-shadow-primary-emphasis border-primary font-bold text-sm':
+              'bg-highlight-emphasis pl-7 text-shadow-primary-emphasis border-primary font-bold text-sm':
                 selectTab().id === tab.id,
-              'hover:bg-highlight-emphasis  border-transparent text-xs':
+              'hover:bg-highlight-emphasis pl-3 border-transparent text-xs':
                 selectTab().id !== tab.id
             }"
           >
@@ -19,7 +20,7 @@
           </div>
         </div>
 
-        @if (tab.closeable) {
+        @if (tab.closeable && selectTab().id === tab.id) {
         <button
           (click)="closeTab(tab.id)"
           class="absolute top-0.5 left-2 scale-80 text-red-400 hover:text-red-600 hover:scale-90 transition-transform duration-300"
