feat(text-input):add formating  currency and carPlate and handel number and lanaguge control  fa and en

--- a/src/app/components/shared/inputs/text-input/text-input.component.html
+++ b/src/app/components/shared/inputs/text-input/text-input.component.html
@@ -28,7 +28,7 @@
       #inputRef
       pInputText
       [id]="id"
-      [type]="type"
+      [type]="getType()"
       [formControl]="control"
       [placeholder]="placeholder"
       [readOnly]="readOnly"
