--- a/src/app/components/forms/factories-production-centers-form/factories-production-centers-form.component.html
+++ b/src/app/components/forms/factories-production-centers-form/factories-production-centers-form.component.html
@@ -87,6 +87,7 @@
           [control]="managerMobile"
           validationField="mobile"
           [addonWidth]="addonWidth"
+          type="number"
         />
       </div>
 
@@ -101,6 +102,7 @@
           [control]="telephone"
           validationField="telephone"
           [addonWidth]="addonWidth"
+          type="number"
         />
       </div>
 
@@ -125,6 +127,7 @@
           [control]="email"
           validationField="email"
           [addonWidth]="addonWidth"
+          language="any"
         />
       </div>
 
