--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -5,9 +5,17 @@
   <div class="absolute p-1 overflow-hidden w-[8rem] top-[-8rem] rounded-[1rem]">
     <div class="absolute overlay bg-surface-0"></div>
     <!-- light theme -->
-    <img class="dark:hidden w-full" src="assets/rmto-logo-noText.png" alt="لوگو" />
+    <img
+      class="dark:hidden w-full"
+      src="assets/rmto-logo-noText.png"
+      alt="لوگو"
+    />
     <!-- dark theme -->
-    <img class="hidden dark:block w-full" src="assets/rmto-logo-dark-noText.png" alt="لوگو" />
+    <img
+      class="hidden dark:block w-full"
+      src="assets/rmto-logo-dark-noText.png"
+      alt="لوگو"
+    />
   </div>
 </div>
 <form
@@ -25,6 +33,7 @@
       [control]="username"
       icon="pi pi-user"
       validationField="username"
+      language="en"
       placeholder="نام کاربری خود را وارد کنید"
     />
 
