refactor(table, message, input): fix input fields, table headers, and dialog titles; add input formatting and prevent duplicate requests in components and forms

--- a/src/app/components/forms/announcement-management-form/announcement-group-form/announcement-group-form.component.html
+++ b/src/app/components/forms/announcement-management-form/announcement-group-form/announcement-group-form.component.html
@@ -16,7 +16,12 @@
 </div>
 
 <!-- 📋 Announcement Table -->
-<app-table [columns]="columns" [rows]="displayAnnouncementsGroup" [enableCaptionButton]="true" (clickCaptionButton)="onNew()">
+<app-table
+  [columns]="columns"
+  [rows]="displayAnnouncementsGroup"
+  [enableCaptionButton]="true"
+  (clickCaptionButton)="onNew()"
+>
   <!-- Table Header -->
   <ng-template #caption>
     <div>
@@ -104,6 +109,7 @@
         [readOnly]="true"
         [disabled]="true"
         [control]="AnnouncementId"
+        language="en"
       />
 
       <app-text-input
@@ -133,4 +139,3 @@
     </div>
   </form>
 </p-dialog>
-
