--- a/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
+++ b/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
@@ -15,6 +15,7 @@
         [disableSearchButton]="searchForm.invalid || loading()"
         [onSearchQuery]="fetchUserByPhone"
         [addonWidth]="'3rem'"
+        type="number"
       />
     </div>
   </form>
@@ -34,6 +35,7 @@
         validationField="id"
         icon="pi pi-id-card"
         label="شناسه کاربری"
+        language="en"
       />
     </div>
 
@@ -66,6 +68,7 @@
           class="flex-1"
           [placeholder]="appTitles.getPlaceholder('userPhoneNumberPlaceholder')"
           [control]="getUserFormControl('phone')"
+          type="number"
         />
       </div>
     </div>
