--- a/src/app/components/forms/user-management-form/users-menu-access-form/users-menu-access-form.component.html
+++ b/src/app/components/forms/user-management-form/users-menu-access-form/users-menu-access-form.component.html
@@ -8,6 +8,7 @@
         [disableSearchButton]="mobileControl.invalid || loading()"
         validationField="mobile"
         icon="pi pi-search"
+        type="number"
       />
     </div>
     <app-tree-table-checkbox
