--- a/src/app/components/forms/lad-places-form/lad-places-form.component.html
+++ b/src/app/components/forms/lad-places-form/lad-places-form.component.html
@@ -5,90 +5,14 @@
   [asyncSearchFn]="searchLADPlace"
   [itemMatchesQuery]="filterLADPlace"
   (searchResult)="handelSearchLADPlaces($event)"
+  [minSearchLength]="2"
 />
-
-<p-table
-  class="col-span-12"
-  styleClass="overflow-x-auto"
-  [columns]="cols"
-  [value]="ladPlaces"
-  [tableStyle]="tableUi.tableStyle"
-  [paginator]="tableUi.paginator"
-  [paginatorLocale]="tableUi.paginatorLocale"
-  [rows]="tableUi.rows"
-  [rowsPerPageOptions]="tableUi.rowsPerPageOptions"
-  [stripedRows]="tableUi.stripedRows"
->
-  <ng-template #caption>
-    <div class="flex items-center justify-between">
-      <app-button
-        (click)="onNew()"
-        [label]="appTitle.buttons.add.addRecord"
-        size="small"
-        styleClass="px-6 md:px-8 py-1"
-      />
-    </div>
-  </ng-template>
-
-  <ng-template #header let-columns>
-    <tr>
-      @for (col of columns; track $index) {
-        <th>{{ col }}</th>
-      }
-    </tr>
-  </ng-template>
-
-  <ng-template #body let-rowData>
-    <tr>
-      <td>{{ rowData.LADPlaceId }}</td>
-
-      <td (click)="onEdit(rowData)">
-        <app-button
-          [disabled]="loading"
-          icon="pi pi-pencil"
-          severity="info"
-          variant="text"
-        ></app-button>
-      </td>
-
-      <td (click)="onDelete(rowData)">
-        <app-button
-          icon="pi pi-trash"
-          severity="danger"
-          variant="text"
-          [disabled]="loading"
-        ></app-button>
-      </td>
-
-      <td>{{ rowData.LADPlaceTitle }}</td>
-
-      <td>
-        <i
-          class="pi"
-          [ngClass]="
-            rowData.LoadingActive
-              ? 'pi-check-circle text-green-500'
-              : 'pi-times-circle text-red-500'
-          "
-        ></i>
-      </td>
-
-      <td>
-        <i
-          class="pi"
-          [ngClass]="
-            rowData.DischargingActive
-              ? 'pi-check-circle text-green-500'
-              : 'pi-times-circle text-red-500'
-          "
-        ></i>
-      </td>
-
-      <td>{{ rowData.LADPlaceTel }}</td>
-      <td>{{ rowData.LADPlaceAddress }}</td>
-    </tr>
-  </ng-template>
-</p-table>
+<app-table
+  [columns]="cloumns"
+  [rows]="ladPlaces()"
+  [enableCaptionButton]="true"
+  (clickCaptionButton)="onNew()"
+/>
 
 <p-dialog
   draggable="false"
@@ -101,10 +25,8 @@
 >
   <form
     class="grid grid-cols-12 gap-4"
-    (ngSubmit)="registerOrEdit()"
-    [class.pointer-events-none]="loading"
-    [class.opacity-60]="loading"
-    [formGroup]="ladPlacesForm"
+    [class.pointer-events-none]="loading()"
+    [class.opacity-60]="loading()"
   >
     <div class="grid grid-cols-12 col-span-12 gap-4">
       <app-text-input
@@ -131,6 +53,7 @@
         validationField="telephone"
         class="col-span-12"
         [addonWidth]="addonWidth"
+        type="number"
       />
       <app-text-input
         [label]="appTitle.inputs.global.address"
@@ -146,11 +69,13 @@
           [label]="appTitle.toggleSwitches.loadingStatus"
           [control]="loadingActive"
           class="col-span-12 flex px-2"
+          labelWidth="9rem"
         />
         <app-toggle-switch-input
           [label]="appTitle.toggleSwitches.dischargingStatus"
           [control]="dischargingActive"
           class="col-span-12 flex px-2"
+          labelWidth="9rem"
         />
       </div>
     </div>
@@ -158,7 +83,7 @@
       <app-button
         (click)="registerOrEdit()"
         [label]="appTitle.buttons.saveAndEdit"
-        [disabled]="ladPlacesForm.invalid || loading"
+        [disabled]="!isFormValidExcept('ladPlacesId') || loading()"
       />
     </div>
   </form>
