--- a/src/app/components/forms/loader-type-form/loader-type-form.component.html
+++ b/src/app/components/forms/loader-type-form/loader-type-form.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-2">
   <!-- Loading Spinner -->
-  @if (loading) {
+  @if (loading()) {
     <div class="h-full w-full z-50 flex items-center justify-center absolute">
       <div class="h-full w-full" style="opacity: 0.2"></div>
       <i class="pi pi-spin pi-spinner primary" style="font-size: 5rem"></i>
@@ -11,9 +11,8 @@
   <form
     class="col-span-12 mb-5"
     [formGroup]="searchForm"
-    [class.pointer-events-none]="loading"
-    [class.opacity-60]="loading"
-    (ngSubmit)="loadLoadersType()"
+    [class.pointer-events-none]="loading()"
+    [class.opacity-60]="loading()"
   >
     <div class="flex gap-2 items-center">
       <app-text-input
@@ -25,7 +24,7 @@
       />
       <app-button
         (click)="loadLoadersType()"
-        [disabled]="searchForm.invalid || loading"
+        [disabled]="searchForm.invalid || loading()"
         size="small"
         severity="info"
         styleClass="px-6 py-2"
@@ -35,41 +34,5 @@
   </form>
 
   <!-- Loader Form -->
-  <div [class.pointer-events-none]="loading" [class.opacity-60]="loading">
-    <p-table
-      [value]="this.loadersFormArray.controls"
-      [tableStyle]="tableUi.tableStyle"
-      [paginator]="tableUi.paginator"
-      [paginatorLocale]="tableUi.paginatorLocale"
-      [rows]="tableUi.rows"
-      [rowsPerPageOptions]="tableUi.rowsPerPageOptions"
-      [stripedRows]="tableUi.stripedRows"
-    >
-      <ng-template #header>
-        <tr>
-          <th>شناسه</th>
-          <th>شناسه سازمانی</th>
-          <th>عنوان بارگیر</th>
-          <th>بارگیر ثابت/غیر ثابت</th>
-          <th>فعال/غیر فعال</th>
-        </tr>
-      </ng-template>
-      <ng-template #body let-control>
-        <tr>
-          <td>{{ control.get("id")?.value }}</td>
-          <td>{{ control.get("code")?.value }}</td>
-          <td>{{ control.get("title")?.value }}</td>
-          <td>{{ control.get("type")?.value }}</td>
-          <td>
-            <p-checkbox
-              [binary]="true"
-              (onChange)="onChangeCheckBox(control)"
-              class="mb-1"
-              [formControl]="control.get('status')"
-            ></p-checkbox>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div>
+  <app-table [rows]="loaderTypes()" [columns]="columns" />
 </div>
