--- a/src/app/components/forms/register-turn-form/register-turn-form.component.html
+++ b/src/app/components/forms/register-turn-form/register-turn-form.component.html
@@ -1,28 +1,35 @@
-<div class="grid grid-cols-12 gap-4">
-  <app-search-auto-complete
-    class="col-span-12"
-    placeholder="صف نوبت"
-    label="صف نوبت"
-    [control]="sequentialTurnTitle"
-    optionLabel="SeqTurnTitle"
-    optionValue="SeqTurnTitle"
-    (selectSuggestion)="onSelectSequentialTurn($event)"
-    (valueChange)="onAutoCompleteChange(sequentialTurnId)"
-    [lazySearch]="searchSequentialTurnWithLoaderType"
-    [showIconOptionSelected]="sequentialTurnId.valid"
-    addonWidth="6rem"
-    [minLength]="0"
-    cachingMode="Focus"
-    [disabled]="loading"
-  />
+@if (truckInfo()) {
+  <div class="grid grid-cols-12 gap-4">
+    <!-- 🟩 Sequential Turns List -->
+    @for (turn of sequentialTurns(); track turn.SeqTurnId) {
+      <div
+        class="shadow-md rounded-lg dark:shadow-gray-700 col-span-12 md:col-span-6 lg:col-span-4"
+      >
+        <p-card class="py-5 rounded-lg">
+          <ng-template pTemplate="header">
+            <div class="font-semibold text-primary text-center text-sm">
+              {{ turn.SeqTurnTitle || "بدون عنوان" }}
+            </div>
+          </ng-template>
 
-  <div class="col-span-12 md:flex md:justify-end mt-6">
-    <app-button
-      label="درخواست صدور نوبت"
-      styleClass="my-2 md:my-0 px-6 text-xs md:text-sm lg:text-base w-full md:w-auto"
-      severity="green"
-      [disabled]="sequentialTurnId.invalid || loading"
-      (click)="submitRealTimeTurn()"
-    />
+          <div class="flex justify-center mt-4">
+            <app-button
+              label="صدور نوبت"
+              styleClass="w-30 py-2 text-sm"
+              (click)="submitRealTimeTurn(turn.SeqTurnId)"
+            >
+            </app-button>
+          </div>
+        </p-card>
+      </div>
+    } @empty {
+      <div class="col-span-12 text-center text-base font-bold text-red-500">
+        نوبتی برای نمایش یافت نشد
+      </div>
+    }
   </div>
-</div>
+} @else {
+  <div class="text-center text-base font-bold text-red-500">
+    اطلاعات راننده یافت نشد.
+  </div>
+}
