--- a/src/app/components/shared/inputs/toggle-switch-input/toggle-switch-input.component.html
+++ b/src/app/components/shared/inputs/toggle-switch-input/toggle-switch-input.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center gap-3">
-  <span class="whitespace-nowrap">{{ label }}</span>
+  <span class="whitespace-nowrap" [style.width]="labelWidth ? labelWidth: 'auto'">{{ label }}</span>
 
   <p-toggleswitch
     [formControl]="control"
