refactor(forget-password-form):clean up message forget password and fix input type number

--- a/src/app/components/forms/forget-password-form/forget-password-form.component.html
+++ b/src/app/components/forms/forget-password-form/forget-password-form.component.html
@@ -17,6 +17,7 @@
     placeholder="شماره موبایل خود را وارد کنید."
     validationField="mobile"
     [control]="phone"
+    type="number"
   />
 
   <div class="flex flex-col gap-2 mb-8">
