--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -63,7 +63,7 @@
   <div class="flex flex-col gap-2 mb-8">
     <app-checkbox-input label="مرا به خاطر بسپار" [control]="rememberMe" />
     <app-button
-      [disabled]="loginForm.invalid"
+      [disabled]="loginForm.invalid || loading()"
       type="submit"
       styleClass="px-8 h-2-5rem w-full"
       severity="primary"
